# AuthMS/src/cmd/api/auth.go
@@ -1,7 +1,10 @@
 package main
 
 import (
+	"encoding/json"
 	"errors"
+	"fmt"
+	"io"
 	"lucamarchiori/MicroserviceBoilerplate/internal/data"
 	"net/http"
 	"time"
@@ -29,21 +32,15 @@ func (app *application) loginHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	// Hash the password
-	passwordHash, err := data.Hash(input.Password)
-	input.Password = ""
-
 	if err != nil {
 		app.serverErrorResponse(w, r, err)
 		return
 	}
 
-	app.logger.Printf(input.Email, passwordHash)
-
 	// Get the corresponding user from the users microservice
 	app.logger.Println("Sending request to users microservice")
 	httpClient := &http.Client{}
-	endpoint := "http://" + app.services["users"] + ":4000" + "/user/?email=" + input.Email
+	endpoint := "http://" + app.services["users"] + ":4000" + "/users?email=" + input.Email
 	req, err := http.NewRequest(http.MethodGet, endpoint, nil)
 	if err != nil {
 		app.serverErrorResponse(w, r, err)
@@ -71,24 +68,51 @@ func (app *application) loginHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	// Read response body
+	body, err := io.ReadAll(res.Body)
+
 	// Step 4: if the user is found, save it in the user variable
-	var user struct {
+	type Users []struct {
 		Id        int       `json:"id"`
 		Name      string    `json:"name,omitempty"`
 		Surname   string    `json:"surname,omitempty"`
 		Email     string    `json:"email,omitempty"`
 		Password  string    `json:"password,omitempty"`
-		CreatedAt time.Time `json:"created_at"`
-		UpdatedAt time.Time `json:"updated_at"`
+		CreatedAt time.Time `json:"created_at,omitempty"`
+		UpdatedAt time.Time `json:"updated_at,omitempty"`
 	}
 
-	user.Id = 1
+	var response struct {
+		Users Users `json:"users,omitempty"`
+	}
 
-	//user.Email = res.Body.
+	if err := json.Unmarshal(body, &response); err != nil {
+		fmt.Println("Can not unmarshal JSON")
+	}
 
-	// For the scope of the project, authentication token are generated randomly
-	// and are not saved in the database. The token is returned to the client but
-	// is not used for actual authentication.
+	if len(response.Users) <= 0 {
+		app.logger.Println("No users found with the specified email address")
+		app.unauthorizedResponse(w, r, errors.New("the users microservice could not find the user with the specified email address"))
+	}
+
+	// Get the first user returned and check for password match
+	pwdMatch, err := data.PasswordMatch(input.Password, response.Users[0].Password)
+
+	if !pwdMatch {
+		app.logger.Println("Password does not match")
+		app.unauthorizedResponse(w, r, errors.New("wrong password"))
+	}
+
+	// Generate a new bearer token
+	app.logger.Println("Password matches, generating new token")
+	token := "Bearer " + data.GenerateSecureToken(32)
+
+	// Return the token to the client along with the user
+	err = app.writeJSON(w, http.StatusOK, envelope{"user": response.Users[0], "token": token}, nil)
+	if err != nil {
+		app.serverErrorResponse(w, r, err)
+	}
+
 }
 
 // Handle the signup request
